Fix [Artifacts] Show actions when table as horizontal scroll (#2160)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -221,6 +221,8 @@ main {
           }
 
           &-icon {
+            position: sticky;
+            right: 0;
             justify-content: center;
             padding: 0;
             max-width: 85px;
